# harp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  cliff.toml  pyproject.toml  release.sh
.github/workflows/: android.yml  ci.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/szaghi/harp/: CameraReticle.kt  CompassIcon.kt  CompassScreen.kt  CompassViewModel.kt  HomeScreen.kt  HomeViewModel.kt  HorizonIcon.kt  HorizonScreen.kt  HorizonViewModel.kt  LogViewModel.kt  MainActivity.kt  PlanScreen.kt  PlanViewModel.kt  PyBridge.kt  Settings.kt  SettingsScreen.kt  Sites.kt  SpikeScreen.kt  Theme.kt
android/app/src/main/python/: home_bridge.py  log_bridge.py  planner_bridge.py  polar_bridge.py  sites_bridge.py  spike.py  wizard.py
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/wheels/: astroplan-0.10.1-py3-none-any.whl
docs/: index.md  package-lock.json
docs/.vitepress/: config.mts
docs/guide/: android.md  changelog.md  index.md  installation.md  usage.md
examples/: balcony.hrz  balcony_points.yaml  my_targets.yaml  night_targets.example.csv  sites.yaml
src/harp/: __init__.py  __main__.py  api.py  catalog.py  cli.py  config.py  ephemeris.py  errors.py  horizon.py  links.py  log.py  mosaic.py  nina.py  optics.py  planner.py  polar.py  report.py  sharpless.py  sites.py  sky.py  solar_system.py
src/harp/data/: sh2_concordance.json  sharpless.db
tests/: conftest.py  test_api.py  test_catalog.py  test_cli.py  test_config.py  test_horizon.py  test_links.py  test_log.py  test_mosaic.py  test_nina.py  test_optics.py  test_planner.py  test_polar.py  test_sharpless.py  test_sites.py  test_sky.py  test_solar_system.py
tools/: build_sh2_concordance.py  build_sharpless.py
