[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name: the bare "harp" is squatted on PyPI by an empty project
# (PEP 541 request pending); import package and CLI command remain "harp".
name = "harp-astro"
version = "0.1.0"
description = "HARP - Horizon-Aware Recommender and Planner for deep-sky astrophotography sessions"
readme = "README.md"
license = { text = "GPL-3.0-or-later OR BSD-2-Clause OR BSD-3-Clause OR MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Stefano Zaghi", email = "stefano.zaghi@gmail.com" },
]
keywords = ["astronomy", "astrophotography", "deep-sky", "planner", "session", "telescope"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "numpy>=1.26",
    "astropy>=6.0",
    "astroplan>=0.9",
    "pyongc>=1.1",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "build>=1.2", "ruff>=0.8"]

[project.urls]
Homepage      = "https://szaghi.github.io/harp/"
Documentation = "https://szaghi.github.io/harp/"
Repository    = "https://github.com/szaghi/harp"
"Bug Tracker" = "https://github.com/szaghi/harp/issues"

[project.scripts]
harp = "harp.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"harp" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=harp --cov-report=term-missing"

[tool.coverage.run]
source = ["harp"]
branch = true
omit = ["*/harp/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",   # line length — handled by formatter
    "B008",   # function call in default argument — typer's Option/Argument pattern
    "T201",   # print — CLI tool prints to the terminal by design
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "PT011"]

[tool.ruff.lint.isort]
known-first-party = ["harp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
